--- a/Customer_Lifetime_Value_RFM_Analysis.ipynb
+++ b/Customer_Lifetime_Value_RFM_Analysis.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1iRbccE9UBm7BPrgabgylzsrSCW3k4nhp",
-      "authorship_tag": "ABX9TyNzH4Kx8eqzO9QcWynx9+ub",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNzH4Kx8eqzO9QcWynx9+ub"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/DataExplorator/MarketingAnalytics/blob/main/Customer_Lifetime_Value_RFM_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
